# vue-bStore

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue  language.ts  main.ts  styles.css
src-tauri/: Cargo.toml  books  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-08-13-191453_create_books/: up.sql
src-tauri/src/: lib.rs  main.rs  models.rs  schema.rs
src/components/: Add.vue  Home.vue  Navbar.vue  Search.vue
